Updated radio buttons to call script on change

--- a/request.html
+++ b/request.html
@@ -1,92 +1,99 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Request Page</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
-    </head>
-    <body>
-        <header>
-            <ul class="banner">
-                <a href="index.html" class ="logo">FOODAR</a>
-                <li class="nav"><a href="register.html">Register</a></li>
-                <li class="nav"><a href="#">Sign In</a></li>
-                <li class="nav"><a href="request.html">Request</a></li>
-            </ul>
-        </header>
-        <br>
-        <br>
-        <main class="request" id="form">
-            <h1>REQUEST</h1>
-            <p>Please fill out form below:</p>
-            <div>
-            <label>Email Address: </label>
-            <br>
-            <br>
-            <input type="text" placeholder="email address">
-            </div>
-            <br>
-            <div>
-            <label>Restaurant:</label>
-            <br>
-            <br>
-                <input type="text" placeholder="restaurant">
-            </div>
-            <br>
-            <p>Choose Your Style:</p>
-            <div onClick="getStyleTotal()">
-                <label>Classic: </label>
-                <input onClick="getStyleTotal()" type="radio" value="3" name="style">
-                <label>Premium: </label>
-                <input type="radio" value="5" name="style">    
-                <label>Royal: </label>
-                <input type="radio" value="10" name="style">
-            </div>
-            <div>
-                <p>Add Tip: </p>
-                <label>10%</label>
-                <input type="radio" value="10" name="tip">
-                <label>15%</label>
-                <input type="radio" value="15" name="tip">
-                <label>20%</label>
-                <input type="radio" value="20" name="tip">
-            </div>
-            <div>
-                <h3 id="total">Total: $</h3>
-            </div>
-            <br>
-            <button type ="submit">REQUEST</button>
-        </main>
-        <footer>
-            <section class="columns">
-                <div class="column-left">
-                    <h4>Site Map</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="register.html">Register</a></li>
-                    </ul>
-                </div>
-                <br>
-                <div class="column-middle">
-                    <h4>Legal</h4>
-                    <ul>
-                        <li> <a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                    </ul>
-                </div>
-                <div class="column-right"></div>
-                <br>
-                <br>
-                <br>
-                <h4>"One Cannot Think Well, Love Well, Sleep Well, <br>
-                    If One Has Not Dined Well"</h4>
-                    <p>-Virginia Woolf</p>
-                </div>
-                </section>
-                <div>
-                    <p>&copy; 2020 FOODAR INC</p>
-                    </div>
-         </footer>
-         <script src="requestpagefunctions.js"></script>
-    </body>
+  <head>
+    <title>Request Page</title>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <ul class="banner">
+        <a href="index.html" class="logo">FOODAR</a>
+        <li class="nav"><a href="register.html">Register</a></li>
+        <li class="nav"><a href="#">Sign In</a></li>
+        <li class="nav"><a href="request.html">Request</a></li>
+      </ul>
+    </header>
+    <br />
+    <br />
+    <main class="request" id="form">
+      <h1>REQUEST</h1>
+      <p>Please fill out form below:</p>
+      <div>
+        <label>Email Address: </label>
+        <br />
+        <br />
+        <input type="text" placeholder="email address" />
+      </div>
+      <br />
+      <div>
+        <label>Restaurant:</label>
+        <br />
+        <br />
+        <input type="text" placeholder="restaurant" />
+      </div>
+      <br />
+      <p>Choose Your Style:</p>
+      <div>
+        <label>Classic: </label>
+        <input onChange="getStyleTotal()" type="radio" value="3" name="style" />
+        <label>Premium: </label>
+        <input onChange="getStyleTotal()" type="radio" value="5" name="style" />
+        <label>Royal: </label>
+        <input
+          onChange="getStyleTotal()"
+          type="radio"
+          value="10"
+          name="style"
+        />
+      </div>
+      <div>
+        <p>Add Tip:</p>
+        <label>10%</label>
+        <input onChange="addTip()" type="radio" value="10" name="tip" />
+        <label>15%</label>
+        <input onChange="addTip()" type="radio" value="15" name="tip" />
+        <label>20%</label>
+        <input onChange="addTip()" type="radio" value="20" name="tip" />
+      </div>
+      <div>
+        <h3 id="total">Total: $<span id="totalvalue"></span></h3>
+      </div>
+      <br />
+      <button type="submit">REQUEST</button>
+    </main>
+    <footer>
+      <section class="columns">
+        <div class="column-left">
+          <h4>Site Map</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="register.html">Register</a></li>
+          </ul>
+        </div>
+        <br />
+        <div class="column-middle">
+          <h4>Legal</h4>
+          <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        <div class="column-right">
+          <br />
+          <br />
+          <br />
+          <h4>
+            "One Cannot Think Well, Love Well, Sleep Well, <br />
+            If One Has Not Dined Well"
+          </h4>
+          <p>-Virginia Woolf</p>
+        </div>
+      </section>
+      <div>
+        <p>&copy; 2020 FOODAR INC</p>
+      </div>
+    </footer>
+    <script type="text/javascript" src="requestpagefunctions.js"></script>
+  </body>
 </html>
