--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Foodar</title>
+    <title>"How It Works!"</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
     <header>
-        <ul class="banner">
+        <ul class="header-info">
             <a href="index.html" class ="logo">FOODAR</a>
             <li class="nav"><a href="register.html">Register</a></li>
             <li class ="nav"><a href="#">Sign In</a></li>
