--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <ul class="banner">
+            <ul class="header-info">
                 <a href="index.html" class ="logo">FOODAR</a>
                 <li class="nav"><a href="register.html">Register</a></li>
                 <li class ="nav"><a href="#">Sign In</a></li>
@@ -22,7 +22,7 @@
         <div class="register">
             <form>
                 <h3>Personal Details:</h3>
-                <input type="text" required placeholder="Email">
+                <input type="email" required placeholder="Email">
                 <input type="text"required placeholder="Password">
                 <br><br>
                 <input type="text" required placeholder="First Name">
@@ -34,7 +34,7 @@
                 <input type="text"required placeholder="Street">
                 <br><br>
                 <input type="text"required placeholder="City">
-                <input type="text"required placeholder="Zip Code">
+                <input type="number"required placeholder="Zip Code">
                 <br>
                 <br>
                 <button type="submit">Register</button>      
