--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
         <link rel="stylesheet" href="style.css" type="text/css"/>
     </head>
     <body>  
-        <header>
-            <ul class="banner">
+        <div hidden id= "banner">
+            <button id = "banner-button" type="button">X</button>
+            <h2>ORDER TODAY AND RECEIVE 15% OFF!</h2>
+                <h3> COUPON CODE: 15OFF</h3>
+        </div>
+            <header id="header">    
+            <ul class="header-info">
                 <a href="index.html" class ="logo">FOODAR</a>
                 <li class="nav"><a href="register.html">Register</a></li>
                 <li class ="nav"><a href="#">Sign In</a></li>
@@ -22,10 +27,13 @@
             <h3>Find Restaurants Around You!</h3>
             <p>Please Enter Your 5 Digits Zip Code Below</p>
         </div>
-        <div class="zip">
-            <input maxlength="5" type="number" placeholder="Zip Code" name="zipcode">
-            <button type="submit">Submit</button>
-        </div>  
+        <form id="zip" action="#">
+            <input maxlength="5" type="number" placeholder="Zip Code" name="zipcode" value="zipcode" id="zipcode">
+            <button id="submit" type="submit" onClick="zipcodeChecker()">Go</button>
+            <br>
+            <br>  
+            <span class="notification" id="result"></span>
+        </form>
         </main>
         <footer>
             <section class="columns">
@@ -56,5 +64,7 @@
             <p>&copy; 2020 FOODAR INC</p>
             </div>
         </footer>
+        <script type= "text/javascript" src="banner.js"></script>
+        <script type = "text/javascript" src="zipcodechecker.js"></script>
     </body>
 </html>
